  - Options --drive-a-heads and --drive-b-heads to select single or
    double sided drives A and B
  - --slowdown option to increase (multiply) VBL wait times
- New Native Features commands:
  - NF_EXIT exits emulator with given exit code
  - NF_DEBUGGER invokes Hatari debugger from native program
  - NF_FASTFORWARD sets fast forward on/off
- Tracing improvements:
  - Fix: Xbios(255) modified the given argument string
  - Allow BIOS, XBIOS, GEMDOS, VDI and AES tracing to be enabled without
    enabling also X/BIOS interception, GEMDOS HD emulation or extended
    VDI mode
  - Show PC value for traced Bios/XBios/GemDOS calls
- Debugger:
  - Fix: release mouse in all cases where debugger can be invoked
  - Fix: DSP disassembler didn't in all cases show illegal opcodes correctly
  - Fix: "symbols" command crash when it was used during TOS bootup
  - Fix: TOS and cartridge addresses weren't (with all TOS versions)
    in address order which asserted in profile data post-processor
  - Fix: "next" command didn't work correctly in "hex" number base
  - Fix: DATA/BSS debug symbol offsets were interpreted based on
    (incorrect) VBCC's vlink behavior
  - New "ym" info subcommand to show YM register values
  - removed limits on breakpoints and their conditions
  - when entering debugger, current program's DRI/GST format debug
    symbols are automatically read from it, if such are available
  - new --debug-except option to specify which exceptions invoke
    the debugger, and WinUAE CPU core support for -D toggle option
  - "next"/"dspnext" commands work like in other debuggers, they
    skip subroutine/exception calls, for all other instructions
    they works like "step" command (earlier they always moved to
    next instruction in memory)
  - "next" and "dspnext" commands support optional "instruction type"
    argument, which can be used (for example) to continue emulation
    until subroutine returns
  - "history" command takes optional parameter specifying how many